tests/core/snapshots/graphql-conformance-nested-lists-http.md_0.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "userGroups": [
        [
          {
            "id": 1,
            "name": "user-1",
            "accountRef": "ref-1-user-1"
          },
          {
            "id": 2,
            "name": "user-2",
            "accountRef": "ref-2-user-2"
          },
          {
            "id": 3,
            "name": "user-3",
            "accountRef": "ref-3-user-3"
          }
        ],
        [
          {
            "id": 4,
            "name": "user-4",
            "accountRef": "ref-4-user-4"
          },
          {
            "id": 5,
            "name": "user-5",
            "accountRef": "ref-5-user-5"
          },
          {
            "id": 6,
            "name": "user-6",
            "accountRef": "ref-6-user-6"
          }
        ]
      ]
    }
  }
}
