tests/core/snapshots/graphql-conformance-nested-lists-http.md_1.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "addUsers": true
    }
  }
}
