tests/core/snapshots/graphql-conformance-nested-lists-http.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar Bytes

scalar Date

scalar DateTime

scalar Email

scalar Empty

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

scalar PhoneNumber

type Query {
  addUsers(userNames: [[String!]!]!): Boolean
  userGroups: [[User!]!]!
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

type User {
  accountRef: String!
  id: ID!
  name: String!
}

schema {
  query: Query
}
