tests/core/snapshots/graphql-conformance-nested-lists.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "userGroups": [
        [
          {
            "id": 1,
            "name": "user-1"
          },
          {
            "id": 2,
            "name": "user-2"
          },
          {
            "id": 3,
            "name": "user-3"
          }
        ],
        [
          {
            "id": 4,
            "name": "user-4"
          },
          {
            "id": 5,
            "name": "user-5"
          },
          {
            "id": 6,
            "name": "user-6"
          }
        ]
      ]
    }
  }
}
