tests/core/snapshots/graphql-conformance-nested-lists.md_1.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "addUsers": true
    }
  }
}
