tests/core/snapshots/graphql-conformance-nested-lists.md_2.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": " --> 3:5\n  |\n3 |     {\n  |     ^---\n  |\n  = expected selection",
        "locations": [
          {
            "line": 3,
            "column": 5
          }
        ]
      }
    ]
  }
}
