tests/core/snapshots/graphql-conformance-nested-lists.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  addUsers(userNames: [[String!]!]!): Boolean
  userGroups: [[User!]!]!
}

type User {
  accountRef: String!
  id: ID!
  name: String!
}

schema {
  query: Query
}
