tests/core/snapshots/graphql-dataloader-batch-request.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar Bytes

scalar Date

scalar DateTime

scalar Email

scalar Empty

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

scalar PhoneNumber

type Post {
  id: Int
  title: String
  user: User
  userId: Int
}

type Query {
  posts: [Post]
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
